# llm-simple-QnA-example

./: .env.temp  .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 01-open-source-llms-langchain.ipynb  01-open-source-llms.ipynb  02-open-ai-langchain-base.ipynb  02-open-ai.ipynb  main.ipynb
scripts/: quantize_openchat_gguf.sh
src/: api.py  app.py
src/chains/: conversation_chat.py  conversation_retrieval_chat.py  qa_retrieval.py
src/helper/: api_utils.py  app_utils.py  constants.py
src/langcorn/: __init__.py  __main__.py
src/langcorn/server/: api.py
src/pages/: chat.py
